--- a/app/templates/app/contact.html
+++ b/app/templates/app/contact.html
@@ -2,19 +2,19 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>Pay</h2>
+<h3>Serviços em geral</h3>
 
 <address>
     Empresa Software Soluções<br />
-    Rua do Código, 1010<br />
+    R. Eva Prata, 627<br />
     <abbr title="Telefone">Tel:</abbr>
-    91010-1010
+    95996-2222
 </address>
 
 <address>
-    <strong>Suporte:</strong>   <a href="mailto:Suporte@example.com">Suporte@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Suporte:</strong>   <a href="mailto:Suporte@pay.com">Suporte@pay.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@pay.com">Marketing@pay.com</a>
 </address>
 
 {% endblock %}
